# Zef

./: .gitignore  Main.hs  README.md  build-ios.py  zef.cabal
demos/exposure-fusion/: Main.hs  fuse.cabal
demos/hdr-exposure-fusion/: Main.hs  hdr.cabal
demos/tracking/TrackerDemo/: SDAppDelegate.h  SDAppDelegate.m  SDViewController.h  SDViewController.mm  TrackerDemo-Info.plist  TrackerView.xib  main.m
demos/tracking/TrackerDemo.xcodeproj/: project.pbxproj
demos/tracking/TrackerDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
demos/tracking/TrackerDemo/hs-src/: MeanShiftTracker.hs  tracker.cabal
src/: Zef.hs
src/Zef/: FileUtils.hs  Image.hsc  Math.hsc  Primitives.hsc  Pyramid.hsc  UI.hsc
src/Zef/Internal/: Fusion.hs  FusionOps.hs  Image.hsc  Types.hsc
src/foreign/: ZefUtil.c  ZefUtil.h
src/interop/: zef_core.cpp  zef_core.h  zef_interop.c  zef_interop.h
