name:           zef
version:        1.0.0
synopsis:       Zef Computer Vision Framework
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
  README.md

library
  hs-source-dirs: src
  exposed-modules:
    Zef
    Zef.UI
    Zef.Image
  c-sources:
      src/foreign/ZefUtil.c
  include-dirs:
    /usr/local/include/opencv2
    src/foreign
  extra-libraries:
    opencv_core
    opencv_highgui
  extra-lib-dirs: /usr/local/lib
  build-depends:
    base < 5
  default-language: Haskell2010
  ghc-options: -Wall

executable zef
  main-is: Main.hs
  build-depends:
    base < 5
   ,zef
  default-language: Haskell2010