name:           zef
version:        1.0.0
synopsis:       Zef Computer Vision Framework
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
  README.md

library
  hs-source-dirs: src
  exposed-modules:
    Zef
    Zef.Internal.Types
    Zef.Internal.Image
    Zef.Image
    Zef.Math
    Zef.UI
    Zef.Pyramid
    Zef.FileUtils
  c-sources:
    src/interop/zef_interop.c
  include-dirs:
    /usr/local/include/opencv2
    src/interop
  extra-libraries:
    opencv_core
    opencv_highgui
    opencv_imgproc
  extra-lib-dirs: /usr/local/lib
  build-depends:
    base < 5,
    directory,
    filepath
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -O2

executable hdr
  main-is: demos/hdr-exposure-fusion/Main.hs
  ghc-options: -Wall -fwarn-tabs -O2
  build-depends:
    base < 5
   ,zef
  default-language: Haskell2010