name:           tracker
version:        1.0.0
synopsis:       Mean-Shift Based Tracker
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
    MeanShiftTracker
  build-depends:
    base < 5,
    zef
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -O2 -staticlib
